GIRAPH-127: Extending the API with a master.compute() function.  Contributed by Jan van der Lugt.
git-svn-id: https://svn.apache.org/repos/asf/giraph/trunk@1355128 13f79535-47bb-0310-9956-ffa450edef68